# acdp-playground

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-images.yml  notify-website.yml
acdp_client/: __init__.py  client.py  identifiers.py  jcs_numbers.py  models.py  retry_after.py  safe_http.py  signing.py  token_manager.py
config/: registry-a.toml  registry-b.toml  registry-c.toml
docs/: README.md  agents.md  architecture.md  client-sdk.md  configuration.md  deployment.md  getting-started.md  http-api.md  scenarios.md  testing-and-conformance.md
playground/: config.py  conformance.py  control_plane.py  events.py  logging_setup.py  main.py  pinned_keys.py  retry_after.py
playground/agents/: __init__.py  base.py  crewai_agent.py  langchain_agent.py  langgraph_agent.py
playground/api/: contexts.py  health.py  runs.py  scenarios.py  webhooks.py
playground/scenarios/: __init__.py  _factory.py  _receipts.py  models.py  registry.py  runner.py
playground/scenarios/catalog/: s10_tenant_isolation.py  s11_revocation.py  s12_key_rotation.py  s13_policy_deny.py  s14_domain_pack.py  s15_supersession_lineage.py  s16_dataref_ssrf.py  s17_supersession_authz.py  s18_idempotency.py  s19_cp_did_web_p256.py  s1_single_publish.py  s20_reserved_tenant.py  s21_capabilities_p256.py  s22_receipts.py  s23_receipt_tamper.py  s24_historical_key.py  s25_did_key.py  s26_divergence.py  s27_receipt_key_rotation.py  s2_producer_consumer.py  s3_fanout.py  s4_chain.py  s5_cross_registry.py  s6_restricted.py  s7_supersession.py  s8_cross_org.py  s9_p256_publish.py
railway/: DEPLOY.md
scripts/: detailed_demo.py  gen_keys.py  pinned_keys_diff.py  smoke_test.py
tests/: test_api_endpoints.py  test_challenge_retry_after.py  test_client_auth.py  test_client_v2.py  test_config.py  test_control_plane_v2.py  test_error_envelope.py  test_events.py  test_idempotency.py  test_identifiers.py  test_jcs_vectors.py  test_pinned_keys_diff.py  test_pinned_keys_windows.py  test_reserved_tenant.py  test_retry_after.py  test_run_e2e_mocked.py  test_runner.py  test_s6_restricted.py  test_safe_http.py  test_scenarios_catalog.py  test_scenarios_offline.py  test_scenarios_round2.py  test_scenarios_round3.py  test_scenarios_v2.py  test_signing.py  test_token_manager.py  test_token_revoke.py  test_webhook_headers.py  test_webhook_signature.py
tests/live/: conftest.py  test_live_conformance.py  test_live_sse_dedup.py
