[project]
name = "acdp-playground"
version = "0.1.0"
description = "ACDP Playground — runs scenarios, drives agents, streams events."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    # 0.2.0 adds AcdpCanonicalizer + AcdpSsrfPolicy, which acdp_client now
    # delegates JCS canonicalization and SSRF classification to.
    "acdp>=0.2.0",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
]
multiagent = [
    "crewai>=0.86",
    "langgraph>=0.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv.sources]
acdp = { path = "../acdp-rs/bindings/acdp-py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acdp_client", "playground"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
